src/parse/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> select_statement
Rule 1     select_statement -> select_core
Rule 2     select_statement -> select_statement set_op select_core
Rule 3     select_statement -> with_clause select_statement
Rule 4     select_statement -> select_statement order_by
Rule 5     select_statement -> select_statement limit
Rule 6     select_core -> select_clause
Rule 7     select_core -> select_clause from_clause
Rule 8     select_core -> select_clause from_clause where_clause
Rule 9     select_core -> select_clause from_clause group_clause
Rule 10    select_core -> select_clause from_clause where_clause group_clause
Rule 11    select_clause -> SELECT result_column
Rule 12    select_clause -> SELECT DISTINCT result_column
Rule 13    select_clause -> select_clause COMMA result_column
Rule 14    column_list -> column
Rule 15    column_list -> column_list COMMA column
Rule 16    common_table_expression -> table_name LPAREN column_list RPAREN AS LPAREN select_statement RPAREN
Rule 17    common_table_expression -> table_name AS LPAREN select_statement RPAREN
Rule 18    with_clause -> WITH common_table_expression
Rule 19    with_clause -> WITH RECURSIVE common_table_expression
Rule 20    with_clause -> with_clause COMMA common_table_expression
Rule 21    result_column -> expr
Rule 22    result_column -> expr AS column_alias
Rule 23    result_column -> expr column_alias
Rule 24    order_by -> ORDER BY ordering_term
Rule 25    order_by -> order_by COMMA ordering_term
Rule 26    ordering_term -> expr
Rule 27    ordering_term -> expr sort_order
Rule 28    limit -> LIMIT expr
Rule 29    limit -> LIMIT expr COMMA expr
Rule 30    from_clause -> FROM table_or_subquery
Rule 31    from_clause -> from_clause COMMA table_or_subquery
Rule 32    from_clause -> FROM join_clause
Rule 33    table_or_subquery -> table_name
Rule 34    table_or_subquery -> table_name table_alias
Rule 35    table_or_subquery -> table_name DOT table_name
Rule 36    table_or_subquery -> table_name AS table_alias
Rule 37    table_or_subquery -> LPAREN select_statement RPAREN
Rule 38    table_or_subquery -> LPAREN join_clause RPAREN
Rule 39    table_or_subquery -> table_name DOT table_name table_alias
Rule 40    table_or_subquery -> LPAREN select_statement RPAREN table_alias
Rule 41    table_or_subquery -> LPAREN select_statement RPAREN AS table_alias
Rule 42    table_or_subquery -> table_name DOT table_name AS table_alias
Rule 43    table_or_subquery -> table_name DOT table_name DOT table_name
Rule 44    table_name -> ID
Rule 45    table_name -> STRING
Rule 46    table_alias -> ID
Rule 47    table_alias -> STRING
Rule 48    join_clause -> table_or_subquery join_op table_or_subquery join_constraint
Rule 49    join_clause -> table_or_subquery join_op table_or_subquery
Rule 50    join_clause -> join_clause join_op table_or_subquery join_constraint
Rule 51    join_clause -> join_clause join_op table_or_subquery
Rule 52    join_constraint -> ON expr
Rule 53    join_constraint -> USING expr
Rule 54    where_clause -> WHERE expr
Rule 55    group_clause -> GROUP BY expr
Rule 56    group_clause -> group_clause COMMA expr
Rule 57    group_clause -> group_clause HAVING expr
Rule 58    group_clause -> group_clause WITH ROLLUP
Rule 59    group_clause -> group_clause WITH ROLLUP HAVING expr
Rule 60    column -> column_name
Rule 61    column -> table_name DOT column_name
Rule 62    fun_expr -> fun_name LPAREN RPAREN
Rule 63    fun_expr -> EXISTS LPAREN select_statement RPAREN
Rule 64    fun_expr -> fun_name LPAREN expr RPAREN
Rule 65    fun_expr -> NOT EXISTS LPAREN select_statement RPAREN
Rule 66    fun_expr -> fun_name LPAREN DISTINCT expr RPAREN
Rule 67    fun_expr -> fun_name LPAREN expr COMMA expr RPAREN
Rule 68    fun_expr -> fun_name LPAREN expr COMMA expr COMMA expr RPAREN
Rule 69    bin_op_expr -> NOT expr
Rule 70    bin_op_expr -> expr AND expr
Rule 71    bin_op_expr -> expr OR expr
Rule 72    bin_op_expr -> expr MINUS expr
Rule 73    bin_op_expr -> expr ARITH_OP expr
Rule 74    bin_op_expr -> expr LIKE expr
Rule 75    bin_op_expr -> expr STAR expr
Rule 76    bin_op_expr -> expr REGEXP expr
Rule 77    bin_op_expr -> expr COMP_OP expr
Rule 78    bin_op_expr -> expr IS expr
Rule 79    bin_op_expr -> expr ORR expr
Rule 80    bin_op_expr -> expr NOT LIKE expr
Rule 81    bin_op_expr -> expr IS NOT expr
Rule 82    bin_op_expr -> expr IN LPAREN select_statement RPAREN
Rule 83    bin_op_expr -> expr IN LPAREN literal_list RPAREN
Rule 84    bin_op_expr -> expr NOT IN LPAREN literal_list RPAREN
Rule 85    bin_op_expr -> expr NOT IN LPAREN select_statement RPAREN
Rule 86    expr -> column
Rule 87    expr -> LPAREN select_statement RPAREN
Rule 88    expr -> LPAREN expr RPAREN
Rule 89    expr -> literal_value
Rule 90    expr -> bin_op_expr
Rule 91    expr -> fun_expr
Rule 92    expr -> between_expr
Rule 93    expr -> cast_expr
Rule 94    expr -> win_expr
Rule 95    expr -> case_expr
Rule 96    expr -> NULL
Rule 97    set_op -> UNION
Rule 98    set_op -> EXCEPT
Rule 99    set_op -> UNION ALL
Rule 100   set_op -> SET_MINUS
Rule 101   set_op -> INTERSECT
Rule 102   sort_order -> ASC
Rule 103   sort_order -> DESC
Rule 104   bin_op -> ARITH_OP
Rule 105   bin_op -> COMP_OP
Rule 106   bin_op -> AND
Rule 107   bin_op -> OR
Rule 108   bin_op -> LIKE
Rule 109   join_op -> JOIN
Rule 110   join_op -> INNER JOIN
Rule 111   join_op -> LEFT JOIN
Rule 112   join_op -> FULL JOIN
Rule 113   join_op -> LEFT OUTER JOIN
Rule 114   join_op -> RIGHT OUTER JOIN
Rule 115   join_op -> FULL OUTER JOIN
Rule 116   join_op -> RIGHT JOIN
Rule 117   join_op -> CROSS JOIN
Rule 118   type_name -> TYPE_NAME
Rule 119   type_name -> type_name LPAREN NUMBER RPAREN
Rule 120   cast_expr -> CAST LPAREN expr AS type_name RPAREN
Rule 121   between_expr -> expr BETWEEN expr bin_op expr
Rule 122   between_expr -> expr NOT BETWEEN expr bin_op expr
Rule 123   column_alias -> ID
Rule 124   column_alias -> STRING
Rule 125   column_alias -> END
Rule 126   column_alias -> RANK
Rule 127   column_alias -> TYPE_NAME
Rule 128   fun_name -> ID
Rule 129   fun_name -> LEFT
Rule 130   fun_name -> TYPE_NAME
Rule 131   literal_value -> NUMBER
Rule 132   literal_value -> STRING
Rule 133   literal_value -> MINUS NUMBER
Rule 134   literal_value -> DATE_LITERAL
Rule 135   literal_value -> NULL
Rule 136   column_name -> ID
Rule 137   column_name -> STRING
Rule 138   column_name -> STAR
Rule 139   column_name -> RANK
Rule 140   column_name -> END
Rule 141   column_name -> TYPE_NAME
Rule 142   win_expr -> win_fun LPAREN RPAREN OVER LPAREN win_def RPAREN
Rule 143   win_expr -> fun_name LPAREN expr RPAREN OVER LPAREN win_def RPAREN
Rule 144   win_expr -> fun_name LPAREN DISTINCT expr RPAREN OVER LPAREN win_def RPAREN
Rule 145   win_expr -> fun_name LPAREN expr COMMA expr RPAREN OVER LPAREN win_def RPAREN
Rule 146   win_def -> order_by
Rule 147   win_def -> PARTITION BY result_column
Rule 148   win_def -> win_def COMMA result_column
Rule 149   win_def -> win_def order_by
Rule 150   win_fun -> RANK
Rule 151   win_fun -> DENSE_RANK
Rule 152   win_fun -> ROW_NUMBER
Rule 153   case_expr -> CASE case_when_expr END
Rule 154   case_expr -> CASE expr case_when_expr END
Rule 155   case_when_expr -> WHEN expr THEN expr
Rule 156   case_when_expr -> WHEN expr THEN expr ELSE expr
Rule 157   case_when_expr -> WHEN expr THEN expr case_when_expr
Rule 158   literal_list -> literal_value
Rule 159   literal_list -> literal_list COMMA literal_value
Rule 160   literal_list -> literal_list OR literal_value

Terminals, with rules where they appear

ALL                  : 99
AND                  : 70 106
ARITH_OP             : 73 104
AS                   : 16 17 22 36 41 42 120
ASC                  : 102
BETWEEN              : 121 122
BY                   : 24 55 147
CASE                 : 153 154
CAST                 : 120
COMMA                : 13 15 20 25 29 31 56 67 68 68 145 148 159
COMP_OP              : 77 105
CROSS                : 117
DATE_LITERAL         : 134
DENSE_RANK           : 151
DESC                 : 103
DISTINCT             : 12 66 144
DOT                  : 35 39 42 43 43 61
ELSE                 : 156
END                  : 125 140 153 154
EXCEPT               : 98
EXISTS               : 63 65
FROM                 : 30 32
FULL                 : 112 115
GROUP                : 55
HAVING               : 57 59
ID                   : 44 46 123 128 136
IN                   : 82 83 84 85
INNER                : 110
INTERSECT            : 101
IS                   : 78 81
JOIN                 : 109 110 111 112 113 114 115 116 117
LEFT                 : 111 113 129
LIKE                 : 74 80 108
LIMIT                : 28 29
LPAREN               : 16 16 17 37 38 40 41 62 63 64 65 66 67 68 82 83 84 85 87 88 119 120 142 142 143 143 144 144 145 145
MINUS                : 72 133
NOT                  : 65 69 80 81 84 85 122
NULL                 : 96 135
NUMBER               : 119 131 133
ON                   : 52
OR                   : 71 107 160
ORDER                : 24
ORR                  : 79
OUTER                : 113 114 115
OVER                 : 142 143 144 145
PARTITION            : 147
RANK                 : 126 139 150
RECURSIVE            : 19
REGEXP               : 76
RIGHT                : 114 116
ROLLUP               : 58 59
ROW_NUMBER           : 152
RPAREN               : 16 16 17 37 38 40 41 62 63 64 65 66 67 68 82 83 84 85 87 88 119 120 142 142 143 143 144 144 145 145
SELECT               : 11 12
SET_MINUS            : 100
STAR                 : 75 138
STRING               : 45 47 124 132 137
THEN                 : 155 156 157
TYPE_NAME            : 118 127 130 141
UNION                : 97 99
USING                : 53
WHEN                 : 155 156 157
WHERE                : 54
WITH                 : 18 19 58 59
error                : 

Nonterminals, with rules where they appear

between_expr         : 92
bin_op               : 121 122
bin_op_expr          : 90
case_expr            : 95
case_when_expr       : 153 154 157
cast_expr            : 93
column               : 14 15 86
column_alias         : 22 23
column_list          : 15 16
column_name          : 60 61
common_table_expression : 18 19 20
expr                 : 21 22 23 26 27 28 29 29 52 53 54 55 56 57 59 64 66 67 67 68 68 68 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 83 84 85 88 120 121 121 121 122 122 122 143 144 145 145 154 155 155 156 156 156 157 157
from_clause          : 7 8 9 10 31
fun_expr             : 91
fun_name             : 62 64 66 67 68 143 144 145
group_clause         : 9 10 56 57 58 59
join_clause          : 32 38 50 51
join_constraint      : 48 50
join_op              : 48 49 50 51
limit                : 5
literal_list         : 83 84 159 160
literal_value        : 89 158 159 160
order_by             : 4 25 146 149
ordering_term        : 24 25
result_column        : 11 12 13 147 148
select_clause        : 6 7 8 9 10 13
select_core          : 1 2
select_statement     : 2 3 4 5 16 17 37 40 41 63 65 82 85 87 0
set_op               : 2
sort_order           : 27
table_alias          : 34 36 39 40 41 42
table_name           : 16 17 33 34 35 35 36 39 39 42 42 43 43 43 61
table_or_subquery    : 30 31 48 48 49 49 50 51
type_name            : 119 120
where_clause         : 8 10
win_def              : 142 143 144 145 148 149
win_expr             : 94
win_fun              : 142
with_clause          : 3 20

Parsing method: LALR

state 0

    (0) S' -> . select_statement
    (1) select_statement -> . select_core
    (2) select_statement -> . select_statement set_op select_core
    (3) select_statement -> . with_clause select_statement
    (4) select_statement -> . select_statement order_by
    (5) select_statement -> . select_statement limit
    (6) select_core -> . select_clause
    (7) select_core -> . select_clause from_clause
    (8) select_core -> . select_clause from_clause where_clause
    (9) select_core -> . select_clause from_clause group_clause
    (10) select_core -> . select_clause from_clause where_clause group_clause
    (18) with_clause -> . WITH common_table_expression
    (19) with_clause -> . WITH RECURSIVE common_table_expression
    (20) with_clause -> . with_clause COMMA common_table_expression
    (11) select_clause -> . SELECT result_column
    (12) select_clause -> . SELECT DISTINCT result_column
    (13) select_clause -> . select_clause COMMA result_column

    WITH            shift and go to state 5
    SELECT          shift and go to state 6

    select_statement               shift and go to state 1
    select_core                    shift and go to state 2
    with_clause                    shift and go to state 3
    select_clause                  shift and go to state 4

state 1

    (0) S' -> select_statement .
    (2) select_statement -> select_statement . set_op select_core
    (4) select_statement -> select_statement . order_by
    (5) select_statement -> select_statement . limit
    (97) set_op -> . UNION
    (98) set_op -> . EXCEPT
    (99) set_op -> . UNION ALL
    (100) set_op -> . SET_MINUS
    (101) set_op -> . INTERSECT
    (24) order_by -> . ORDER BY ordering_term
    (25) order_by -> . order_by COMMA ordering_term
    (28) limit -> . LIMIT expr
    (29) limit -> . LIMIT expr COMMA expr

    UNION           shift and go to state 10
    EXCEPT          shift and go to state 11
    SET_MINUS       shift and go to state 12
    INTERSECT       shift and go to state 13
    ORDER           shift and go to state 14
    LIMIT           shift and go to state 15

    set_op                         shift and go to state 7
    order_by                       shift and go to state 8
    limit                          shift and go to state 9

state 2

    (1) select_statement -> select_core .

    UNION           reduce using rule 1 (select_statement -> select_core .)
    EXCEPT          reduce using rule 1 (select_statement -> select_core .)
    SET_MINUS       reduce using rule 1 (select_statement -> select_core .)
    INTERSECT       reduce using rule 1 (select_statement -> select_core .)
    ORDER           reduce using rule 1 (select_statement -> select_core .)
    LIMIT           reduce using rule 1 (select_statement -> select_core .)
    $end            reduce using rule 1 (select_statement -> select_core .)
    RPAREN          reduce using rule 1 (select_statement -> select_core .)


state 3

    (3) select_statement -> with_clause . select_statement
    (20) with_clause -> with_clause . COMMA common_table_expression
    (1) select_statement -> . select_core
    (2) select_statement -> . select_statement set_op select_core
    (3) select_statement -> . with_clause select_statement
    (4) select_statement -> . select_statement order_by
    (5) select_statement -> . select_statement limit
    (6) select_core -> . select_clause
    (7) select_core -> . select_clause from_clause
    (8) select_core -> . select_clause from_clause where_clause
    (9) select_core -> . select_clause from_clause group_clause
    (10) select_core -> . select_clause from_clause where_clause group_clause
    (18) with_clause -> . WITH common_table_expression
    (19) with_clause -> . WITH RECURSIVE common_table_expression
    (20) with_clause -> . with_clause COMMA common_table_expression
    (11) select_clause -> . SELECT result_column
    (12) select_clause -> . SELECT DISTINCT result_column
    (13) select_clause -> . select_clause COMMA result_column

    COMMA           shift and go to state 17
    WITH            shift and go to state 5
    SELECT          shift and go to state 6

    with_clause                    shift and go to state 3
    select_statement               shift and go to state 16
    select_core                    shift and go to state 2
    select_clause                  shift and go to state 4

state 4

    (6) select_core -> select_clause .
    (7) select_core -> select_clause . from_clause
    (8) select_core -> select_clause . from_clause where_clause
    (9) select_core -> select_clause . from_clause group_clause
    (10) select_core -> select_clause . from_clause where_clause group_clause
    (13) select_clause -> select_clause . COMMA result_column
    (30) from_clause -> . FROM table_or_subquery
    (31) from_clause -> . from_clause COMMA table_or_subquery
    (32) from_clause -> . FROM join_clause

    UNION           reduce using rule 6 (select_core -> select_clause .)
    EXCEPT          reduce using rule 6 (select_core -> select_clause .)
    SET_MINUS       reduce using rule 6 (select_core -> select_clause .)
    INTERSECT       reduce using rule 6 (select_core -> select_clause .)
    ORDER           reduce using rule 6 (select_core -> select_clause .)
    LIMIT           reduce using rule 6 (select_core -> select_clause .)
    $end            reduce using rule 6 (select_core -> select_clause .)
    RPAREN          reduce using rule 6 (select_core -> select_clause .)
    COMMA           shift and go to state 19
    FROM            shift and go to state 20

    from_clause                    shift and go to state 18

state 5

    (18) with_clause -> WITH . common_table_expression
    (19) with_clause -> WITH . RECURSIVE common_table_expression
    (16) common_table_expression -> . table_name LPAREN column_list RPAREN AS LPAREN select_statement RPAREN
    (17) common_table_expression -> . table_name AS LPAREN select_statement RPAREN
    (44) table_name -> . ID
    (45) table_name -> . STRING

    RECURSIVE       shift and go to state 22
    ID              shift and go to state 24
    STRING          shift and go to state 25

    common_table_expression        shift and go to state 21
    table_name                     shift and go to state 23

state 6

    (11) select_clause -> SELECT . result_column
    (12) select_clause -> SELECT . DISTINCT result_column
    (21) result_column -> . expr
    (22) result_column -> . expr AS column_alias
    (23) result_column -> . expr column_alias
    (86) expr -> . column
    (87) expr -> . LPAREN select_statement RPAREN
    (88) expr -> . LPAREN expr RPAREN
    (89) expr -> . literal_value
    (90) expr -> . bin_op_expr
    (91) expr -> . fun_expr
    (92) expr -> . between_expr
    (93) expr -> . cast_expr
    (94) expr -> . win_expr
    (95) expr -> . case_expr
    (96) expr -> . NULL
    (60) column -> . column_name
    (61) column -> . table_name DOT column_name
    (131) literal_value -> . NUMBER
    (132) literal_value -> . STRING
    (133) literal_value -> . MINUS NUMBER
    (134) literal_value -> . DATE_LITERAL
    (135) literal_value -> . NULL
    (69) bin_op_expr -> . NOT expr
    (70) bin_op_expr -> . expr AND expr
    (71) bin_op_expr -> . expr OR expr
    (72) bin_op_expr -> . expr MINUS expr
    (73) bin_op_expr -> . expr ARITH_OP expr
    (74) bin_op_expr -> . expr LIKE expr
    (75) bin_op_expr -> . expr STAR expr
    (76) bin_op_expr -> . expr REGEXP expr
    (77) bin_op_expr -> . expr COMP_OP expr
    (78) bin_op_expr -> . expr IS expr
    (79) bin_op_expr -> . expr ORR expr
    (80) bin_op_expr -> . expr NOT LIKE expr
    (81) bin_op_expr -> . expr IS NOT expr
    (82) bin_op_expr -> . expr IN LPAREN select_statement RPAREN
    (83) bin_op_expr -> . expr IN LPAREN literal_list RPAREN
    (84) bin_op_expr -> . expr NOT IN LPAREN literal_list RPAREN
    (85) bin_op_expr -> . expr NOT IN LPAREN select_statement RPAREN
    (62) fun_expr -> . fun_name LPAREN RPAREN
    (63) fun_expr -> . EXISTS LPAREN select_statement RPAREN
    (64) fun_expr -> . fun_name LPAREN expr RPAREN
    (65) fun_expr -> . NOT EXISTS LPAREN select_statement RPAREN
    (66) fun_expr -> . fun_name LPAREN DISTINCT expr RPAREN
    (67) fun_expr -> . fun_name LPAREN expr COMMA expr RPAREN
    (68) fun_expr -> . fun_name LPAREN expr COMMA expr COMMA expr RPAREN
    (121) between_expr -> . expr BETWEEN expr bin_op expr
    (122) between_expr -> . expr NOT BETWEEN expr bin_op expr
    (120) cast_expr -> . CAST LPAREN expr AS type_name RPAREN
    (142) win_expr -> . win_fun LPAREN RPAREN OVER LPAREN win_def RPAREN
    (143) win_expr -> . fun_name LPAREN expr RPAREN OVER LPAREN win_def RPAREN
    (144) win_expr -> . fun_name LPAREN DISTINCT expr RPAREN OVER LPAREN win_def RPAREN
    (145) win_expr -> . fun_name LPAREN expr COMMA expr RPAREN OVER LPAREN win_def RPAREN
    (153) case_expr -> . CASE case_when_expr END
    (154) case_expr -> . CASE expr case_when_expr END
    (136) column_name -> . ID
    (137) column_name -> . STRING
    (138) column_name -> . STAR
    (139) column_name -> . RANK
    (140) column_name -> . END
    (141) column_name -> . TYPE_NAME
    (44) table_name -> . ID
    (45) table_name -> . STRING
    (128) fun_name -> . ID
    (129) fun_name -> . LEFT
    (130) fun_name -> . TYPE_NAME
    (150) win_fun -> . RANK
    (151) win_fun -> . DENSE_RANK
    (152) win_fun -> . ROW_NUMBER

    DISTINCT        shift and go to state 27
    LPAREN          shift and go to state 30
    NULL            shift and go to state 38
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    MINUS           shift and go to state 43
    DATE_LITERAL    shift and go to state 44
    NOT             shift and go to state 45
    EXISTS          shift and go to state 48
    CAST            shift and go to state 49
    CASE            shift and go to state 51
    ID              shift and go to state 53
    STAR            shift and go to state 46
    RANK            shift and go to state 54
    END             shift and go to state 52
    TYPE_NAME       shift and go to state 55
    LEFT            shift and go to state 56
    DENSE_RANK      shift and go to state 57
    ROW_NUMBER      shift and go to state 58

    result_column                  shift and go to state 26
    expr                           shift and go to state 28
    column                         shift and go to state 29
    literal_value                  shift and go to state 31
    bin_op_expr                    shift and go to state 32
    fun_expr                       shift and go to state 33
    between_expr                   shift and go to state 34
    cast_expr                      shift and go to state 35
    win_expr                       shift and go to state 36
    case_expr                      shift and go to state 37
    column_name                    shift and go to state 39
    table_name                     shift and go to state 40
    fun_name                       shift and go to state 47
    win_fun                        shift and go to state 50

state 7

    (2) select_statement -> select_statement set_op . select_core
    (6) select_core -> . select_clause
    (7) select_core -> . select_clause from_clause
    (8) select_core -> . select_clause from_clause where_clause
    (9) select_core -> . select_clause from_clause group_clause
    (10) select_core -> . select_clause from_clause where_clause group_clause
    (11) select_clause -> . SELECT result_column
    (12) select_clause -> . SELECT DISTINCT result_column
    (13) select_clause -> . select_clause COMMA result_column

    SELECT          shift and go to state 6

    select_core                    shift and go to state 59
    select_clause                  shift and go to state 4

state 8

    (4) select_statement -> select_statement order_by .
    (25) order_by -> order_by . COMMA ordering_term

    UNION           reduce using rule 4 (select_statement -> select_statement order_by .)
    EXCEPT          reduce using rule 4 (select_statement -> select_statement order_by .)
    SET_MINUS       reduce using rule 4 (select_statement -> select_statement order_by .)
    INTERSECT       reduce using rule 4 (select_statement -> select_statement order_by .)
    ORDER           reduce using rule 4 (select_statement -> select_statement order_by .)
    LIMIT           reduce using rule 4 (select_statement -> select_statement order_by .)
    $end            reduce using rule 4 (select_statement -> select_statement order_by .)
    RPAREN          reduce using rule 4 (select_statement -> select_statement order_by .)
    COMMA           shift and go to state 60


state 9

    (5) select_statement -> select_statement limit .

    UNION           reduce using rule 5 (select_statement -> select_statement limit .)
    EXCEPT          reduce using rule 5 (select_statement -> select_statement limit .)
    SET_MINUS       reduce using rule 5 (select_statement -> select_statement limit .)
    INTERSECT       reduce using rule 5 (select_statement -> select_statement limit .)
    ORDER           reduce using rule 5 (select_statement -> select_statement limit .)
    LIMIT           reduce using rule 5 (select_statement -> select_statement limit .)
    $end            reduce using rule 5 (select_statement -> select_statement limit .)
    RPAREN          reduce using rule 5 (select_statement -> select_statement limit .)


state 10

    (97) set_op -> UNION .
    (99) set_op -> UNION . ALL

    SELECT          reduce using rule 97 (set_op -> UNION .)
    ALL             shift and go to state 61


state 11

    (98) set_op -> EXCEPT .

    SELECT          reduce using rule 98 (set_op -> EXCEPT .)


state 12

    (100) set_op -> SET_MINUS .

    SELECT          reduce using rule 100 (set_op -> SET_MINUS .)


state 13

    (101) set_op -> INTERSECT .

    SELECT          reduce using rule 101 (set_op -> INTERSECT .)


state 14

    (24) order_by -> ORDER . BY ordering_term

    BY              shift and go to state 62


state 15

    (28) limit -> LIMIT . expr
    (29) limit -> LIMIT . expr COMMA expr
    (86) expr -> . column
    (87) expr -> . LPAREN select_statement RPAREN
    (88) expr -> . LPAREN expr RPAREN
    (89) expr -> . literal_value
    (90) expr -> . bin_op_expr
    (91) expr -> . fun_expr
    (92) expr -> . between_expr
    (93) expr -> . cast_expr
    (94) expr -> . win_expr
    (95) expr -> . case_expr
    (96) expr -> . NULL
    (60) column -> . column_name
    (61) column -> . table_name DOT column_name
    (131) literal_value -> . NUMBER
    (132) literal_value -> . STRING
    (133) literal_value -> . MINUS NUMBER
    (134) literal_value -> . DATE_LITERAL
    (135) literal_value -> . NULL
    (69) bin_op_expr -> . NOT expr
    (70) bin_op_expr -> . expr AND expr
    (71) bin_op_expr -> . expr OR expr
    (72) bin_op_expr -> . expr MINUS expr
    (73) bin_op_expr -> . expr ARITH_OP expr
    (74) bin_op_expr -> . expr LIKE expr
    (75) bin_op_expr -> . expr STAR expr
    (76) bin_op_expr -> . expr REGEXP expr
    (77) bin_op_expr -> . expr COMP_OP expr
    (78) bin_op_expr -> . expr IS expr
    (79) bin_op_expr -> . expr ORR expr
    (80) bin_op_expr -> . expr NOT LIKE expr
    (81) bin_op_expr -> . expr IS NOT expr
    (82) bin_op_expr -> . expr IN LPAREN select_statement RPAREN
    (83) bin_op_expr -> . expr IN LPAREN literal_list RPAREN
    (84) bin_op_expr -> . expr NOT IN LPAREN literal_list RPAREN
    (85) bin_op_expr -> . expr NOT IN LPAREN select_statement RPAREN
    (62) fun_expr -> . fun_name LPAREN RPAREN
    (63) fun_expr -> . EXISTS LPAREN select_statement RPAREN
    (64) fun_expr -> . fun_name LPAREN expr RPAREN
    (65) fun_expr -> . NOT EXISTS LPAREN select_statement RPAREN
    (66) fun_expr -> . fun_name LPAREN DISTINCT expr RPAREN
    (67) fun_expr -> . fun_name LPAREN expr COMMA expr RPAREN
    (68) fun_expr -> . fun_name LPAREN expr COMMA expr COMMA expr RPAREN
    (121) between_expr -> . expr BETWEEN expr bin_op expr
    (122) between_expr -> . expr NOT BETWEEN expr bin_op expr
    (120) cast_expr -> . CAST LPAREN expr AS type_name RPAREN
    (142) win_expr -> . win_fun LPAREN RPAREN OVER LPAREN win_def RPAREN
    (143) win_expr -> . fun_name LPAREN expr RPAREN OVER LPAREN win_def RPAREN
    (144) win_expr -> . fun_name LPAREN DISTINCT expr RPAREN OVER LPAREN win_def RPAREN
    (145) win_expr -> . fun_name LPAREN expr COMMA expr RPAREN OVER LPAREN win_def RPAREN
    (153) case_expr -> . CASE case_when_expr END
    (154) case_expr -> . CASE expr case_when_expr END
    (136) column_name -> . ID
    (137) column_name -> . STRING
    (138) column_name -> . STAR
    (139) column_name -> . RANK
    (140) column_name -> . END
    (141) column_name -> . TYPE_NAME
    (44) table_name -> . ID
    (45) table_name -> . STRING
    (128) fun_name -> . ID
    (129) fun_name -> . LEFT
    (130) fun_name -> . TYPE_NAME
    (150) win_fun -> . RANK
    (151) win_fun -> . DENSE_RANK
    (152) win_fun -> . ROW_NUMBER

    LPAREN          shift and go to state 30
    NULL            shift and go to state 38
    NUMBER          shift and go to state 41
    STRING          shift and go to state 42
    MINUS           shift and go to state 43
    DATE_LITERAL    shift and go to state 44
    NOT             shift and go to state 45
    EXISTS          shift and go to state 48
    CAST            shift and go to state 49
    CASE            shift and go to state 51
    ID              shift and go to state 53
    STAR            shift and go to state 46
    RANK            shift and go to state 54
    END             shift and go to state 52
    TYPE_NAME       shift and go to state 55
    LEFT            shift and go to state 56
    DENSE_RANK      shift and go to state 57
    ROW_NUMBER      shift and go to state 58

    expr                           shift and go to state 63
    column                         shift and go to state 29
    literal_value                  shift and go to state 31
    bin_op_expr                    shift and go to state 32
    fun_expr                       shift and go to state 33
    between_expr                   shift and go to state 34
    cast_expr                      shift and go to state 35
    win_expr                       shift and go to state 36
    case_expr                      shift and go to state 37
    column_name                    shift and go to state 39
    table_name                     shift and go to state 40
    fun_name                       shift and go to state 47
    win_fun                        shift and go to state 50

state 16

    (3) select_statement -> with_clause select_statement .
    (2) select_statement -> select_statement . set_op select_core
    (4) select_statement -> select_statement . order_by
    (5) select_statement -> select_statement . limit
    (97) set_op -> . UNION
    (98) set_op -> . EXCEPT
    (99) set_op -> . UNION ALL
    (100) set_op -> . SET_MINUS
    (101) set_op -> . INTERSECT
    (24) order_by -> . ORDER BY ordering_term
    (25) order_by -> . order_by COMMA ordering_term
    (28) limit -> . LIMIT expr
    (29) limit -> . LIMIT expr COMMA expr

  ! shift/reduce conflict for UNION resolved as shift
  ! shift/reduce conflict for EXCEPT resolved as shift
  ! shift/reduce conflict for SET_MINUS resolved as shift
  ! shift/reduce conflict for INTERSECT resolved as shift
  ! shift/reduce conflict for ORDER resolved as shift
  ! shift/reduce conflict for LIMIT resolved as shift
    $end            reduce using rule 3 (select_statement -> with_clause select_statement .)
    RPAREN          reduce using rule 3 (select_statement -> with_clause select_statement .)
    UNION           shift and go to state 10
    EXCEPT          shift and go to state 11
    SET_MINUS       shift and go to state 12
    INTERSECT       shift and go to state 13
    ORDER           shift and go to state 14
    LIMIT           shift and go to state 15

  ! UNION           [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]
  ! EXCEPT          [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]
  ! SET_MINUS       [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]
  ! INTERSECT       [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]
  ! ORDER           [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]
  ! LIMIT           [ reduce using rule 3 (select_statement -> with_clause select_statement .) ]

    set_op                         shift and go to state 7
    order_by                       shift and go to state 8
    limit                          shift and go to state 9

state 17

    (20) with_clause -> with_clause COMMA . common_table_expression
    (16) common_table_expression -> . table_name LPAREN column_list RPAREN AS LPAREN select_statement RPAREN
    (17) common_table_expression -> . table_name AS LPAREN select_statement RPAREN
    (44) table_name -> . ID
    (45) table_name -> . STRING

    ID              shift and go to state 24
    STRING          shift and go to state 25

    common_table_expression        shift and go to state 64
    table_name                     shift and go to state 23

state 18

    (7) select_core -> select_clause from_clause .
    (8) select_core -> select_clause from_clause . where_clause
    (9) select_core -> select_clause from_clause . group_clause
    (10) select_core -> select_clause from_clause . where_clause group_clause
    (31) from_clause -> from_clause . COMMA table_or_subquery
    (54) where_clause -> . WHERE expr
    (55) group_clause -> . GROUP BY expr
    (56) group_clause -> . group_clause COMMA expr
    (57) group_clause -> . group_clause HAVING expr
    (58) group_clause -> . group_clause WITH ROLLUP
    (59) group_clause -> . group_clause WITH ROLLUP HAVING expr

    UNION           reduce using rule 7 (select_core -> select_clause from_clause .)
    EXCEPT          reduce using rule 7 (select_core -> select_clause from_clause .)
    SET_MINUS       reduce using rule 7 (select_core -> select_clause from_clause .)
    INTERSECT       reduce using rule 7 (select_core -> select_clause from_clause .)
    ORDER           reduce using rule 7 (select_core -> select_clause from_clause .)
    LIMIT           reduce using rule 7 (select_core -> select_clause from_clause .)
    $end            reduce using rule 7 (select_core -> select_clause from_clause .)
    RPAREN          reduce using rule 7 (select_core -> select_clause from_clause .)
    COMMA           shift and go to state 67
    WHERE           shift and go to state 68
    GROUP           shift and go to state 69

    where_clause                   shift and go to state 65
    group_clause                   shift and go to state 66

state 19
